sass/_data-table.scss
/* Data table */

.table-rows-pagination {
    text-align: right;
}

.table-rows-pagination form,
.table-rows-pagination .table-pagination {
    display: inline-block;
}

.data-table th {
    position: relative;
}

.data-table th * {
    color: #000;
}

.data-table thead button {
    border: 1px solid #bbb;
    background-color: inherit;
    vertical-align: bottom;
    white-space: nowrap;
    overflow: hidden;
    max-width: 13em;
    text-overflow: ellipsis;
    -ms-text-overflow: ellipsis;
    &:hover {
        & + .popover {
            display: block;
        }
    }
}

.data-table thead .column-name {
    font-weight: bold;
    font-style: italic;
    font-size: 1.2em;
    margin-bottom: .2em;
}

.data-table thead .popover {
    word-break: keep-all;
    word-break: break-word;
    overflow-wrap: break-word;
    padding: .5em;
    margin-top: 6px;
    min-width: 200px;
    top: auto !important; /* Overwrite the custom inline style as applied by positionDisclosure(). */
    left: 8px !important; /* Overwrite the custom inline style as applied by positionDisclosure(). */

    /* Add a ::before to expand the hover area so there's no gap anymore between the button and the popover. */
    &::before {
        content: "";
        width: 100%;
        height: 7px;
        position: absolute;
        left: 0;
        top: -7px;
    }

    &:hover {
        display: block;
    }

    .column-filter__clear {
        margin: 6px 0;
        display: block;
    }

    .column-filter__search {
        position: relative;
        margin-bottom: 10px;

        &:before {
            position: absolute;
            font-family: 'FontAwesome';
            font-size: 12px;
            top: 4px;
            left: 5px;
            content: "\f002";
            color: #aaa;
        }
    }

    .column-filter__search-input {
        width: 100%;
        height: 24px;
        padding: 0 18px 0 20px;

        &::-ms-clear {
            display: none;
        }
    }

    .column-filter__clear-search-input {
        position: absolute;
        right: 5px;
        top: 5px;
        text-decoration: none;
    }

    .column-filter__error {
        padding: 5px;
        margin: 0;
    }

    .column-filter__values {
        list-style-type: none;
        padding: 0;
        max-height: 200px;
        overflow-y: auto;
        margin-bottom: 0;
    }

    .column-filter__value {
        label {
            font-weight: normal;
        }

        input {
            margin-right: .3em;
        }
    }

    .column-filter__buttons {
        text-align: right;
    }

    .column-filter__button {
        margin: 0;
        cursor: pointer;
    }
}

.data-table thead th:last-child .popover {
    left: auto !important;
    right: 8px !important; /* Overwrite the custom inline style as applied by positionDisclosure(). */
}

.data-table thead .helptext {
    padding-top: 1em;
}

.data-table thead .helptext + * {
    margin: 1em 0 0 0;
}

.data-table thead button {
    margin-top: .5em;
}

.controls {
    padding-top: .5em;
}

/* Person contact details popover */

.person.contact-details {
    max-width: 25em;
    padding: .5em;
    margin: .5em;
}

/* RAG legend */

#rag_legend {
    margin-top: 1em;
    margin-bottom: .5em;
}

#rag_legend > span {
    font-size: .85em;
    font-weight: bold;
    margin-right: 1em;
}

#rag_legend dl {
    display: inline-block;
    margin: 0;
    padding: 0;
}

#rag_legend dt,
#rag_legend dd {
    display: inline-block;
}

#rag_legend dd {
    padding-right: 1em;
    font-size: 85%;
}

.rag span {
    min-width: 1.5em;
    min-height: 1.5em;
    display: inline-block;
    font-size: 1em;
    text-align: center;
    padding: 0 0.2em;
    border-bottom: 0.2em solid #000;
}

.file img {
    display: block;
}

.rag .undefined {
    border-bottom-color: $rag-undefined;
    background-color: $rag-undefined-bg;
}

.rag .danger {
    border-bottom-color: $rag-danger;
    background-color: $rag-danger-bg;
}

.rag .warning {
    border-bottom-color: $rag-warning;
    background-color: $rag-warning-bg;
}

.rag .advisory {
    border-bottom-color: $rag-advisory;
    background-color: $rag-advisory-bg;
}

.rag .success {
    border-bottom-color: $rag-success;
    background-color: $rag-success-bg;
}

.rag .unexpected {
    border-bottom-color: $rag-unexpected;
    background-color: $rag-unexpected-bg;
}

